# SimpleNavigator

./: CMakeLists.txt  Makefile  README.md
src/: Menu.cc  Menu.h  app.cc  main.cc  s21_graph.cc  s21_graph.h  s21_graph_algorithms.cc  s21_graph_algorithms.h  test_graph.cc  test_graph_algorithms.cc
src/tests/: matrix6.txt
